--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -76,6 +76,7 @@ $color-body: $white;
 $color-header: $yellow-3;
 $color-footer: $yellow-2;
 $color-nav-links: $yellow-0;
+$color-yellow: $yellow-0;
 
 $color-btn-del: $white;
 $color-blockquote: $green-light;
@@ -106,6 +107,7 @@ $bg-color-blockquote: $transparent-mid;
 $bg-color-list-1: $transparent;
 $bg-color-list-2: $transparent-mid;
 $bg-flash: $transparent-super-dark;
+$bg-dark: $transparent-super-dark;
 
 
 // borders
@@ -113,6 +115,7 @@ $border-header: $blue-green-4;
 $border-footer: $blue-green-4;
 $border-regular: $yellow-3;
 $border-dark: $green-dark;
+$border-black: $black;
 $border-alternate: $yellow-0;
 $border-code: $grey-dark;
 
