--- a/assets/styles/scss/partials/typography/_typography.scss
+++ b/assets/styles/scss/partials/typography/_typography.scss
@@ -143,6 +143,10 @@ li {
     margin-bottom: var.$baseline-x2;
 }
 
+.right {
+    float: right;
+}
+
 // .introduction {
 //     font-family: var.$font-header;
 //     font-weight: 500;
