--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -557,6 +557,10 @@ li {
   margin-bottom: 2.8rem;
 }
 
+.right {
+  float: right;
+}
+
 .img {
   margin-bottom: 1.4rem;
   border-radius: 5px;
@@ -586,18 +590,32 @@ picture {
 
 .cards {
   width: 100%;
+  min-height: 140px;
   display: flex;
   flex-flow: row wrap;
   gap: 1.4rem;
   margin-bottom: 1.4rem;
-}
-.cards .right {
-  margin-left: auto;
+  padding: 0.7rem;
+  border: 1px solid #000;
+  border-radius: 5px;
 }
 
 .card {
   font-size: 100px;
   margin-bottom: -20px;
+  position: relative;
+}
+
+.deck-count {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #C7942E;
+  background-color: rgba(0, 0, 0, 0.85);
+  font-weight: 300;
+  border-radius: 50%;
+  padding: 0.35rem;
 }
 
 .label-small, .form label {
@@ -751,7 +769,6 @@ picture {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 50vh;
   border: 1px solid #A17317;
   border-radius: 10px;
   padding: 1.4rem;
