Add templates for game

--- a/templates/game/_nav.html.twig
+++ b/templates/game/_nav.html.twig
@@ -4,4 +4,5 @@
     <li><a href="{{ path('game_start') }}">start</a></li>
     <li><a href="{{ path('game_play') }}">spela</a></li>
     <li><a href="{{ path('game_doc') }}">dokumentation</a></li>
+    <li><a href="{{ path('game_test') }}">test</a></li>
 </ul>
