--- a/templates/main/api.html.twig
+++ b/templates/main/api.html.twig
@@ -6,6 +6,7 @@
 
         <a class="button btn-api" href="{{ path('quote') }}">Dagens citat</a>
         <a class="button btn-api" href="{{ path('api_deck') }}">Sorterad kortlek</a>
+        <a class="button btn-api" href="{{ path('api_game') }}">Ställning i kortspelet 21</a>
 
         <form method="post" action="">
             <button
