Get started with library assignment
Add Entity
Migrate
Create Controller and routes
Create templates

--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -109,6 +109,10 @@ $bg-color-list-2: $transparent-mid;
 $bg-flash: $transparent-super-dark;
 $bg-dark: $transparent-super-dark;
 
+$bg-color-table-header: $blue-green-0;
+$bg-color-table-data: $transparent-mid;
+$bg-color-table-hover: $transparent-dark;
+
 
 // borders
 $border-header: $blue-green-4;
