--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -677,6 +677,35 @@ picture {
   margin: 0;
 }
 
+table {
+  border-collapse: collapse;
+  width: 100%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+  margin-bottom: 1.4rem;
+}
+
+th, td {
+  text-align: left;
+  padding: 0.7rem;
+}
+
+tr:nth-child(even) {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+th {
+  background-color: #1C7878;
+}
+
+tr:hover {
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
+tr.clickable:hover {
+  cursor: pointer;
+}
+
 .button {
   display: block;
   width: fit-content;
