--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -7,6 +7,7 @@
 @use "partials/dice";
 @use "partials/cards";
 @use "partials/form";
+@use "partials/table";
 @use "partials/buttons";
 @use "partials/flash";
 @use "partials/containers";
