--- a/assets/styles/scss/partials/responsive/_images.scss
+++ b/assets/styles/scss/partials/responsive/_images.scss
@@ -12,3 +12,10 @@ img {
         margin-bottom: var.$baseline;
     }
 }
+
+
+@media (max-width: 750px) {
+    .book {
+        float: none;
+    }
+}
