--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,7 @@
                     <li><a href="{{ path('card_start') }}">card</a></li>
                     <li><a href="{{ path('game_start') }}">game</a></li>
                     <li><a href="{{ path('library_start') }}">bibliotek</a></li>
+                    <li><a href="{{ path('metrics') }}">metrics</a></li>
                 </ul>
             </nav>
         </header>
