Create routes and empty templates for project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
                     <li><a href="{{ path('game_start') }}">game</a></li>
                     <li><a href="{{ path('library_start') }}">bibliotek</a></li>
                     <li><a href="{{ path('metrics') }}">metrics</a></li>
+                    <li><a href="{{ path('proj_start') }}">projekt</a></li>
                 </ul>
             </nav>
         </header>
