--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -11,4 +11,5 @@
 @use "partials/buttons";
 @use "partials/flash";
 @use "partials/containers";
+@use "partials/poker-squares";
 @use "partials/responsive/responsive";
