--- a/templates/proj/game/multiplayer.html.twig
+++ b/templates/proj/game/multiplayer.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main text-container">
+    <main class="main">
         <div class="sub-nav">
             {{ include('proj/_nav.html.twig') }}
         </div>
