--- a/assets/styles/scss/partials/_cards.scss
+++ b/assets/styles/scss/partials/_cards.scss
@@ -16,6 +16,8 @@
     font-size: 100px;
     margin-bottom: -20px;
     position: relative;
+    top: -5px;
+    left: 5px;
 
     // &[class*="f0b"],
     // &[class*="f0c"] {
