--- a/templates/proj/game/_deck_and_buttons.html.twig
+++ b/templates/proj/game/_deck_and_buttons.html.twig
@@ -1,10 +1,5 @@
-<div class="deck-and-buttons">
-    {% for row in range(1, 5) %}
-        <div class="row">
-            {% for col in range(1, 5) %}
-                <div id="{{ row ~ "-" ~ col }}" class="slot"></div>
-            {% endfor %}
-        </div>
-    {% endfor %}
+<div class="deck-and-card">
+    <div class="card">{{ cardBack|raw }}</div>
+    <div class="card">{{ card|raw }}</div>
 </div>
 
