--- a/templates/proj/game/_gameboard.html.twig
+++ b/templates/proj/game/_gameboard.html.twig
@@ -2,9 +2,19 @@
     {% for row in range(1, 5) %}
         <div class="row">
             {% for col in range(1, 5) %}
-                <div id="{{ row ~ "-" ~ col }}" class="slot"></div>
+                {% set slot = row ~ col %}
+                {% if slot in gameboard|keys %}
+                    <div class="slot">
+                        <span class="card">{{ gameboard[slot]|raw }}</span>
+                    </div>
+                {% else %}
+                    <div class="slot empty-slot" data-slot-id="{{ slot }}"></div>
+                {% endif %}
             {% endfor %}
         </div>
     {% endfor %}
-</div>
 
+    <form id="place_card_form" action="{{ path('proj_place_card') }}" method="post">
+        <input id="card_slot_input" type="hidden" name="slot_id" value="0">
+    </form>
+</div>
