--- a/templates/proj/game/index.html.twig
+++ b/templates/proj/game/index.html.twig
@@ -8,6 +8,6 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <a class="button margin-b" href="{{ path('proj_singleplayer') }}">Singleplayer</a>
+        <a class="button margin-b" href="{{ path('proj_test_init') }}">Singleplayer test</a>
     </main>
 {% endblock %}
