Write CardSvg class and unittest, run tests
CardSvg represents cards with class names for
svg images

--- a/templates/proj/game/_deck_and_buttons.html.twig
+++ b/templates/proj/game/_deck_and_buttons.html.twig
@@ -1,5 +1,5 @@
 <div class="deck-and-card">
-    <div class="card">{{ cardBack|raw }}</div>
+    <div class="svg-card-back"></div>
+    {# <div class="card">{{ cardBack|raw }}</div> #}
     <div class="card">{{ card|raw }}</div>
 </div>
-
