--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -6,6 +6,7 @@
 @use "partials/images";
 @use "partials/dice";
 @use "partials/cards";
+@use "partials/svg_cards";
 @use "partials/form";
 @use "partials/table";
 @use "partials/buttons";
