--- a/templates/proj/game/_deck_and_buttons.html.twig
+++ b/templates/proj/game/_deck_and_buttons.html.twig
@@ -1,5 +1,4 @@
 <div class="deck-and-card">
-    <div class="svg-card-back"></div>
-    {# <div class="card">{{ cardBack|raw }}</div> #}
-    <div class="card">{{ card|raw }}</div>
+    <div class="slot {{ cardBack|raw }}"></div>
+    <div class="slot {{ card|raw }}"></div>
 </div>
