--- a/templates/proj/game/_gameboard.html.twig
+++ b/templates/proj/game/_gameboard.html.twig
@@ -3,11 +3,8 @@
         <div class="row">
             {% for col in range(1, 5) %}
                 {% set slot = row ~ col %}
-                {% if slot in gameboard|keys %}
+                {% if gameboard[slot] %}
                     <div class="slot {{ gameboard[slot] }}"></div>
-                    {# <div class="slot">
-                        <span class="card">{{ gameboard[slot]|raw }}</span>
-                    </div> #}
                 {% else %}
                     <div class="slot empty-slot" data-slot-id="{{ slot }}"></div>
                 {% endif %}
