Add logic to templates for scoring

--- a/templates/proj/game/_deck_and_card.html.twig
+++ b/templates/proj/game/_deck_and_card.html.twig
@@ -1,4 +1,5 @@
 <div class="deck-and-card">
     <div class="slot {{ cardBack|raw }}"></div>
     <div class="slot {{ card|raw }}"></div>
+    <div class="header-sm">Summa: {{ totalScore }}</div>
 </div>
