--- a/templates/proj/game/_gameboard.html.twig
+++ b/templates/proj/game/_gameboard.html.twig
@@ -3,12 +3,23 @@
         <div class="row">
             {% for col in range(1, 5) %}
                 {% set slot = row ~ col %}
-                {% if gameboard[slot] %}
-                    <div class="slot {{ gameboard[slot] }}"></div>
+                {% if board[slot] %}
+                    <div class="slot {{ board[slot] }}">
+                        {% if row == 5 %}
+                            <span class="hand-score-col header-sm">{{ handScores["col" ~ col] }}</span>
+                        {% endif %}
+                    </div>
                 {% else %}
-                    <div class="slot empty-slot" data-slot-id="{{ slot }}"></div>
+                    <div class="slot empty-slot" data-slot-id="{{ slot }}">
+                        {% if row == 5 %}
+                            <span class="hand-score-col header-sm">{{ handScores["col" ~ col] }}</span>
+                        {% endif %}
+                    </div>
                 {% endif %}
+
+
             {% endfor %}
+            <span class="hand-score-row header-sm">{{ handScores["row" ~ row] }}</span>
         </div>
     {% endfor %}
 
