--- a/templates/proj/game/index.html.twig
+++ b/templates/proj/game/index.html.twig
@@ -8,6 +8,7 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <a class="button margin-b" href="{{ path('proj_test_init') }}">Singleplayer test</a>
+        <a href="{{ path('proj_rules') }}">Regler</a>
+        <a class="button margin-b" href="{{ path('proj_game_init_view') }}">Spela</a>
     </main>
 {% endblock %}
