--- a/templates/proj/game/singleplayer.html.twig
+++ b/templates/proj/game/singleplayer.html.twig
@@ -7,6 +7,7 @@
         </div>
 
         <h1>{{ pageTitle }}</h1>
+        <h2 class="header-m margin-b">{{ player }}</h2>
 
         <div class="gameview">
             {{ include('proj/game/_gameboard.html.twig') }}
