--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -112,6 +112,8 @@ $bg-dark: $transparent-super-dark;
 $bg-color-table-header: $blue-green-0;
 $bg-color-table-data: $transparent-mid;
 $bg-color-table-hover: $transparent-dark;
+$bg-color-option: $almost-black;
+
 
 
 // borders
