Implement new changes

--- a/templates/proj/game/create_player.html.twig
+++ b/templates/proj/game/create_player.html.twig
@@ -8,7 +8,9 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        {{ include('proj/game/form/_player.html.twig') }}
+        {{ include('flash.html.twig') }}
+
+        {{ form(form) }}
 
     </main>
 {% endblock %}
