--- a/templates/proj/game/end_of_game.html.twig
+++ b/templates/proj/game/end_of_game.html.twig
@@ -16,7 +16,7 @@
                 <form action="{{ path('proj_game_save') }}" method="post">
                     <button class="button margin-b" type="submit">Spara runda</button>
                 </form>
-                <a class="button" href="{{ path('proj_game_init_view') }}">Nytt spel</a>
+                <a class="button" href="{{ path('proj_singleplayer_init') }}">Nytt spel</a>
             </div>
         </div>
     </main>
