--- a/templates/proj/game/index.html.twig
+++ b/templates/proj/game/index.html.twig
@@ -8,7 +8,8 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <a href="{{ path('proj_rules') }}">Regler</a>
-        <a class="button margin-b" href="{{ path('proj_game_init_view') }}">Spela</a>
+        <a class="button margin-b" href="{{ path('proj_rules') }}">Regler</a>
+        <a class="button margin-b" href="{{ path('proj_singleplayer_init') }}">Singleplayer</a>
+        {# <a class="button margin-b" href="{{ path('proj_multiplayer_init') }}">Multiplayerplayer</a> #}
     </main>
 {% endblock %}
