--- a/templates/proj/game/game_setup.html.twig
+++ b/templates/proj/game/game_setup.html.twig
@@ -19,7 +19,8 @@
         {% endfor %}
 
         {% if players|length > 0 %}
-            {{ form(startForm) }}
+            {{ form(playerDeselectBtn) }}
+            {{ form(startBtn) }}
         {% endif %}
 
     </main>
