--- a/templates/proj/game/index.html.twig
+++ b/templates/proj/game/index.html.twig
@@ -10,6 +10,7 @@
 
         <a class="button margin-b" href="{{ path('proj_rules') }}">Regler</a>
         <a class="button margin-b" href="{{ path('proj_singleplayer_init') }}">Singleplayer</a>
+        <a class="button margin-b" href="{{ path('proj_game_init') }}">Spela</a>
         {# <a class="button margin-b" href="{{ path('proj_multiplayer_init') }}">Multiplayerplayer</a> #}
     </main>
 {% endblock %}
