--- a/templates/proj/game/gameplay.html.twig
+++ b/templates/proj/game/gameplay.html.twig
@@ -6,8 +6,8 @@
             {{ include('proj/_nav.html.twig') }}
         </div>
 
-        <h1>{{ pageTitle }}</h1>
-        <h2 class="header-m margin-b">{{ player }}</h2>
+        {# <h1>{{ pageTitle }}</h1> #}
+        {# <h2 class="header-m margin-b">{{ game.player }}</h2> #}
 
         <div class="gameview">
             {{ include('proj/game/_gameboard.html.twig') }}
