--- a/templates/proj/game/_deck_and_card.html.twig
+++ b/templates/proj/game/_deck_and_card.html.twig
@@ -1,5 +1,6 @@
 <div class="deck-and-card">
-    <div class="slot {{ cardBack|raw }}"></div>
-    <div class="slot {{ card|raw }}"></div>
-    <div class="header-sm">Summa: {{ totalScore }}</div>
+    <h2 class="header-m">{{ game.player }}</h2>
+    <div class="header-sm">Summa: {{ game.totalScore }}</div>
+    <div class="slot {{ game.cardBack|raw }}"></div>
+    <div class="slot {{ game.card|raw }}"></div>
 </div>
