--- a/templates/proj/game/end_of_game_copy.html.twig
+++ b/templates/proj/game/end_of_game_copy.html.twig
@@ -8,23 +8,16 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        {{ include('flash.html.twig') }}
-
-        {% for game in gameStates %}
         <div class="gameview">
             {{ include('proj/game/_gameboard.html.twig') }}
 
             <div>
-                <h2>{{ game.player }}</h2>
-                <h2>Summa: {{ game.totalScore }} poäng</h2>
+                <h2>Summa: {{ totalScore }} poäng</h2>
                 <form action="{{ path('proj_game_save') }}" method="post">
-                    <input type="hidden" name="game_index" value="{{ loop.index0 }}">
                     <button class="button margin-b" type="submit">Spara runda</button>
                 </form>
+                <a class="button" href="{{ path('proj_singleplayer_init') }}">Nytt spel</a>
             </div>
         </div>
-        {% endfor %}
-
-        <a class="button" href="{{ path('proj_game_init') }}">Nytt spel</a>
     </main>
 {% endblock %}
