Fix style issues

--- a/assets/styles/scss/partials/typography/_typography.scss
+++ b/assets/styles/scss/partials/typography/_typography.scss
@@ -147,6 +147,10 @@ li {
     margin-bottom: var.$baseline;
 }
 
+.margin-b-half {
+    margin-bottom: var.$baseline-half;
+}
+
 .margin-b-x2 {
     margin-bottom: var.$baseline-x2;
 }
