--- a/templates/proj/game/_deck_and_card.html.twig
+++ b/templates/proj/game/_deck_and_card.html.twig
@@ -1,6 +1,6 @@
 <div class="deck-and-card">
     <h2 class="header-m">{{ game.player }}</h2>
-    <div class="header-sm">Summa: {{ game.totalScore }}</div>
+    <div class="header-m">{{ game.totalScore }} poäng</div>
     <div class="slot {{ game.cardBack|raw }}"></div>
     <div class="slot {{ game.card|raw }}"></div>
 </div>
