--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -580,6 +580,10 @@ li {
   margin-bottom: 1.4rem;
 }
 
+.margin-b-half {
+  margin-bottom: 0.7rem;
+}
+
 .margin-b-x2 {
   margin-bottom: 2.8rem;
 }
@@ -883,7 +887,7 @@ picture {
 .form {
   display: flex;
   flex-direction: column;
-  width: min(400px, 80%);
+  max-width: 400px;
   font-family: inherit;
   font-size: 1rem;
   margin: 0;
@@ -1121,6 +1125,17 @@ tr.clickable:hover {
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
+}
+
+.players {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+  max-width: 400px;
+  padding: 0.7rem;
+  margin-bottom: 1.4rem;
+  border: 1px solid #A17317;
+  border-radius: 5px;
 }
 
 @media (max-width: 900px) {
