--- a/assets/styles/scss/partials/_form.scss
+++ b/assets/styles/scss/partials/_form.scss
@@ -11,7 +11,8 @@
 .form {
     display: flex;
     flex-direction: column;
-    width: min(400px, 80%);
+    // width: min(400px, 80%);
+    max-width: 400px;
     font-family: inherit;
     font-size: 1rem;
     margin: 0;
