--- a/assets/styles/scss/partials/_poker-squares.scss
+++ b/assets/styles/scss/partials/_poker-squares.scss
@@ -51,3 +51,14 @@
     flex-direction: column;
     gap: var.$baseline;
 }
+
+.players {
+    display: flex;
+    flex-direction: column;
+    gap: var.$baseline-half;
+    max-width: 400px;
+    padding: var.$baseline-half;
+    margin-bottom: var.$baseline;
+    border: 1px solid var.$border-regular;
+    border-radius: 5px;
+}
