--- a/templates/proj/game/delete_player.html.twig
+++ b/templates/proj/game/delete_player.html.twig
@@ -12,7 +12,11 @@
 
         <h2 class="header-m margin-b">Id: {{ player.id }}</h2>
         <h2 class="header-m margin-b">Namn: {{ player.name }}</h2>
-        <h2 class="header-m margin-b">Typ: ...</h2>
+        <h2 class="header-m margin-b">
+            Typ:
+            {{ player.type }}
+            {% if player.level %} level {{ player.level }} {% endif %}
+        </h2>
         <h2 class="header-m margin-b">Antal rundor: {{ player.rounds|length }}</h2>
 
         <h2 class="header-m margin-b">Observera att eventuella rundor relaterade till spelaren raderas!</h2>
