Add three api routes

--- a/templates/proj/_nav.html.twig
+++ b/templates/proj/_nav.html.twig
@@ -4,4 +4,5 @@
     <li><a href="{{ path('proj_highscore') }}">Topplista</a></li>
     <li><a href="{{ path('proj_show_players') }}">Spelare</a></li>
     <li><a href="{{ path('proj_show_rounds') }}">Rundor</a></li>
+    <li><a href="{{ path('proj_api') }}">API</a></li>
 </ul>
