--- a/templates/proj/index.html.twig
+++ b/templates/proj/index.html.twig
@@ -11,7 +11,7 @@
         <ul>
             <li><a class="button margin-b" href="{{ path('proj_about') }}">Om</a></li>
             <li><a class="button margin-b" href="{{ path('proj_game_start') }}">Poker Squares</a></li>
-            <li><a class="button margin-b" href="{{ path('proj_highscore') }}">Topplista</a></li>
+            <li><a class="button margin-b" href="{{ path('proj_api') }}">API</a></li>
         </ul>
     </main>
 {% endblock %}
