Add api route for resetting db

--- a/templates/proj/api/api.html.twig
+++ b/templates/proj/api/api.html.twig
@@ -8,9 +8,10 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <a class="button margin-b" href="{{ path('proj_api_players') }}">Visa alla spelare</a>
         <a class="button margin-b" href="{{ path('proj_api_highscore') }}">Visa topplista</a>
+        <a class="button margin-b" href="{{ path('proj_api_players') }}">Visa alla spelare</a>
         <a class="button margin-b" href="{{ path('proj_api_rounds') }}">Visa alla rundor</a>
-
+        {{ form(resetForm) }}
+        
     </main>
 {% endblock %}
